tests/profile/error/meta/wrong_parameter_value_type.profile
{
  "version": { "major": 1, "minor": 0 },
  "meta": {
    "unknown-type": "name"
  }
}
